refactor: rename thz-lang-engine-JVM25 to thz-lang-engine-JVM across the repository